# baseball-rl

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml
docs/: FILTER_RULES.md
scripts/: 01_download.py  02_filter.py  03_split.py  04_verify.py  05_tokenize.py  06_verify_tokens.py  07_smoke_test.py  08_train.py  09_behavioral.py  10_fqe.py  audit.py
src/: configs.py  dataset.py  download.py  encoder.py  eval.py  filter.py  fqe.py  ope_metrics.py  qtransformer.py  report.py  splits.py  tokenize.py  trainer.py  verify.py
tests/: test_configs.py  test_encoder.py  test_eval.py  test_filter.py  test_fqe.py  test_ope_metrics.py  test_qtransformer.py  test_tokenize.py  test_trainer.py
